syntax = "proto3";
package aadk.v1;

message Id {
  string value = 1; // opaque id
}

message RunId {
  string value = 1; // opaque run id
}

message Timestamp {
  int64 unix_millis = 1;
}

message KeyValue {
  string key = 1;
  string value = 2;
}

message HostStatus {
  string os_name = 1;
  string os_version = 2;
  string arch = 3;
  string kernel_version = 4;
  uint64 ram_total_bytes = 5;
  uint64 ram_free_bytes = 6;
  uint64 disk_total_bytes = 7;
  uint64 disk_free_bytes = 8;
  string cpu_model = 9;
  uint32 cpu_cores = 10;
}

message Pagination {
  uint32 page_size = 1;
  string page_token = 2;
}

message PageInfo {
  string next_page_token = 1;
}

message ReloadStateRequest {}

message ReloadStateResponse {
  bool ok = 1;
  uint32 item_count = 2;
  string detail = 3;
}
